Twitter sharing updated to blockquote.

--- a/src/twitter.html
+++ b/src/twitter.html
@@ -15,7 +15,7 @@ for (let quote of quotes) {
   const author = document.getElementsByClassName('social-icon twitter').length > 1
     ? ' by @' + document.getElementsByClassName('social-icon twitter')[1].href.replace('https://twitter.com/', '')
     : ''
-  const textContent = '“' + document.getElementsByClassName('title')[0].textContent + '”' + author + ': ' + quote.textContent
+  const textContent = '“' + document.getElementsByClassName('title')[0].textContent + '”' + author + ': “' + quote.textContent + '”'
   anchor.href = `https://twitter.com/intent/tweet/?text=${encodeURIComponent(textContent)}&url=${encodeURI(window.location.href)}&via=ProgressOrg&hashtags=${hashtagString}`
   anchor.innerText = quote.textContent
   anchor.setAttribute('class', 'highlight')
